--- a/index.html
+++ b/index.html
@@ -87,7 +87,15 @@ body {
   <div class="right" style="background-color: antiquewhite;">Column</div>
   
   <div class="footer">
-    <p>Kim Nguyen, 2021</p>
+    <p>Kim Nguyen, 2021<br>
+    <br>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Valid CSS!" />
+            </a>
+        </p></p>
   </div>
 </div>
 </body>
