--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@ body {
   <div class="right" style="background-color: antiquewhite;">Column</div>
   
   <div class="footer">
-    <p>Kim Nguyen, 2021<br>
-    <br>
-    <p>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px"
-                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                alt="Valid CSS!" />
-            </a>
-        </p></p>
+    <p>Kim Nguyen, 2021<br/>
+    <br/>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+    </p>
   </div>
 </div>
 </body>
