--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ body {
   <div class="footer">
     <p>Kim Nguyen, 2021<br/>
     <br/>
+      <a href="https://validator.w3.org/check?uri=referer">
+        <img style="border:none;height:31px;width:31px;text-decoration:none;"
+            src="http://myy.haaga-helia.fi/~valju/ValidatorLogos/html_logo_grayscale_31.png"
+            alt="Valid HTML"  /></a>
       <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
