--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@ body {
   <div class="footer">
     <p>Kim Nguyen, 2021<br/>
     <br/>
-      <a href="https://validator.w3.org/check?uri=referer">
-        <img style="border:none;height:31px;width:31px;text-decoration:none;"
-            src="http://myy.haaga-helia.fi/~valju/ValidatorLogos/html_logo_grayscale_31.png"
-            alt="Valid HTML"  /></a>
+      <a href="http://www.w3.org/html/logo/">
+      <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+      </a>
       <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
