--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ body {
 <div class="grid-container">
   <div class="header">
     <h2>Welcome to my site!</h2>
+    <p>I'm a BITE student at Haaga-Helia UAS</p>
+  <p><a href="https://www.haaga-helia.fi/en">Haaga-Helia University of Applied Sciences</a></p>
   </div>
   
   <div class="left" style="background-color: antiquewhite;">Column</div>
