--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
   </div>
   
   <div class="left" style="background-color: antiquewhite;">Column
-  <p> <img scr="/image.jpg" alt="girl with camera"/>
+  <img scr="kimie-14.jpg" alt="girl with camera"/>
  </div>
   <div class="middle" style="background-color: antiquewhite;">Column</div>  
   <div class="right" style="background-color: antiquewhite;">Column</div>
