--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@ body {
   <p><a href="https://www.haaga-helia.fi/en">Haaga-Helia University of Applied Sciences</a></p>
   </div>
   
-  <div class="left" style="background-color: antiquewhite;">Column
-  <img scr="kimie-14.jpg" alt="girl with camera"/>
- </div>
+  <div class="left" style="background-color: antiquewhite;">Column</div>
   <div class="middle" style="background-color: antiquewhite;">Column</div>  
   <div class="right" style="background-color: antiquewhite;">Column</div>
   
