--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ body {
   <p><a href="https://www.haaga-helia.fi/en">Haaga-Helia University of Applied Sciences</a></p>
   </div>
   
-  <div class="left" style="background-color: antiquewhite;">Column</div>
-  <div class="middle" style="background-color: antiquewhite;">Column</div>  
-  <div class="right" style="background-color: antiquewhite;">Column</div>
+  <div class="left" style="background-color: antiquewhite;"></div>
+  <div class="middle" style="background-color: antiquewhite;"></div>  
+  <div class="right" style="background-color: antiquewhite;"></div>
   
   <div class="footer">
     <p>Kim Nguyen, 2021<br/>
