--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.image {
+  width: 19em;
+  height: 28em;
+  object-fit: cover;
+ 
 .header {
   grid-area: header;
   background-color: aquamarine;
@@ -84,9 +89,15 @@ body {
   <p><a href="https://www.haaga-helia.fi/en">Haaga-Helia University of Applied Sciences</a></p>
   </div>
   
-  <div class="left" style="background-color: antiquewhite;"> </div>
-  <div class="middle" style="background-color: antiquewhite;"> </div>  
-  <div class="right" style="background-color: antiquewhite;"> </div>
+  <div class="left" style="background-color: antiquewhite;"> 
+  <img src="kimie-28.jpg" alt="girl with camera"/>
+ </div>
+  <div class="middle" style="background-color: antiquewhite;"> 
+ <img src="20191002_094245.jpg" alt="girl travelling"/>
+ </div>  
+  <div class="right" style="background-color: antiquewhite;">
+ <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat"/>
+ </div>
   
   <div class="footer">
     <p>Kim Nguyen, 2021<br/>
