--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ body {
   </div>
   
   <div class="left" style="background-color: antiquewhite;"> 
-  <img src="kimie-28.jpg" alt="girl with camera"/>
+  <img src="kimie-28.jpg" alt="girl with camera">
  </div>
   <div class="middle" style="background-color: antiquewhite;"> 
- <img src="20191002_094245.jpg" alt="girl travelling"/>
+ <img src="20191002_094245.jpg" alt="girl travelling">
  </div>  
   <div class="right" style="background-color: antiquewhite;">
- <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat"/>
+ <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat">
  </div>
   
   <div class="footer">
