--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
 * {
   box-sizing: border-box;
 }
-
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
-.image {
-  width: 19em;
-  height: 28em;
-  object-fit: cover;
- }
  
 .header {
   grid-area: header;
@@ -26,6 +19,12 @@ body {
   font-size: 35px;
   font-family: 'Courier New', Courier, monospace;
 }
+.image{
+  width=: 19em;
+  height= 28em;
+  object-fit; cover;
+ }
+ 
 .grid-container {
   display: grid;
   grid-template-areas: 
@@ -91,13 +90,13 @@ body {
   </div>
   
   <div class="left" style="background-color: antiquewhite;"> 
-  <img src="kimie-28.jpg" alt="girl with camera">
+  <img src="kimie-28.jpg" alt="girl with camera" class="image">
  </div>
   <div class="middle" style="background-color: antiquewhite;"> 
- <img src="20191002_094245.jpg" alt="girl travelling">
+ <img src="20191002_094245.jpg" alt="girl travelling" class="image">
  </div>  
   <div class="right" style="background-color: antiquewhite;">
- <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat">
+ <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat" class="image">
  </div>
   
   <div class="footer">
