--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ body {
   font-size: 35px;
   font-family: 'Courier New', Courier, monospace;
 }
-.image{
-  width: 19em;
-  height: 28em;
+.image {
+  width: 19px;
+  height: 28px;
   object-fit: cover;
- }
+}
  
 .grid-container {
   display: grid;
@@ -90,13 +90,13 @@ body {
   </div>
   
   <div class="left" style="background-color: antiquewhite;"> 
-  <img src="kimie-28.jpg" alt="girl with camera" class="image">
+  <img src="kimie-28.jpg" alt="girl with camera" class="image"/>
  </div>
   <div class="middle" style="background-color: antiquewhite;"> 
- <img src="20191002_094245.jpg" alt="girl travelling" class="image">
+ <img src="20191002_094245.jpg" alt="girl travelling" class="image"/>
  </div>  
   <div class="right" style="background-color: antiquewhite;">
- <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat" class="image">
+ <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat" class="image"/>
  </div>
   
   <div class="footer">
