--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 .image {
-  width: 19px;
-  height: 28px;
+  width: 19em;
+  height: 28em;
   object-fit: cover;
 }
  
