--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 .image {
   height: 300px;
   width: 400px; 
-  object-fit: cover;
+  object-fit: fill;
 }
 .footer {
   grid-area: footer;
