--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ body {
 }
  
 .image {
-  height: 300px;
+  height: 250px;
   width: 350px; 
-  object-fit: contain;
+  object-fit: cover;
 }
 .footer {
   grid-area: footer;
