--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ body {
   width: 300px; 
   object-fit: cover;
 }
+ 
+.image1 {
+ height: 250px;
+ width: 500px;
+ object-fit: cover;
+ 
 .footer {
   grid-area: footer;
   background-color: #f1f1f1;
@@ -93,7 +99,7 @@ body {
   <img src="kimie-28.jpg" alt="girl with camera" class="image"/>
  </div>
   <div class="middle" style="background-color: antiquewhite;"> 
-  <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat" class="image"/>
+  <img src="IMG-20191005-WA0018.jpg" alt=" girl in rice hat" class="image1"/>
  </div>  
   <div class="right" style="background-color: antiquewhite;">
   <img src="20191002_094245.jpg" alt="girl travelling" class="image"/>
